name:                gloss-counter
version:             0.1.0.0
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , gloss
                     , random
  default-language:    Haskell2010
  other-modules:       Controller
                     , Model
                     , View
                     , Helper
                     , Bullet
                     , Asteroid
                     , Animation
  default-language:    Haskell2010